external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/conflict_deny_allow_same_code.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10008]: ambiguous attribute value
  ┌─ tests/move_check/warning_suppression/conflict_deny_allow_same_code.move:2:9
  │
2 │ #[allow(dead_code)]
  │         ^^^^^^^^^ Conflicting filter for 'dead_code' specified in the same attribute
3 │ #[deny(dead_code)]
  │        --------- Conflicting filter for 'dead_code' specified here
